Bug 333579. Firefox crash with image map areas and accessibility. r=pilgrim, sr=neil